# bacon-ai-speech-to-text

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SESSION-RESUME-20260220-2245.md  SESSION-RESUME-LOG-20260228.md  constitution.yml  start-dev.bat  start-dev.sh  start.bat  start.sh
.github/: CODEOWNERS
docs/add/: ADD-001-architecture.md  ADD-002-v1.1-text-refinement.md  ADD-003-v1.3-ux-enhancements.md  ADD-004-v1.4-file-transcription.md
docs/adr/: ADR-000-template.md
docs/plans/: LATEST-STATUS-REPORT-20260228.md  PHASE-PLAN-A-foundation.md  PHASE-PLAN-B-activation-modes.md  PHASE-PLAN-C-integrations.md  PHASE-PLAN-D-polish.md  PHASE-PLAN-E-text-refinement.md  PLAN-SIDEBAR-DISCUSS-20260220.md  PLAN-THREE-VERSION-SPLIT-20260215.md  PLAN-V1.6-UX-ENHANCEMENTS-20260228.md  PLAN-VERSIONING-STRATEGY-20260216.md
docs/prd/: PRD-001-bacon-ai-voice.md  PRD-002-v1.1-text-refinement.md  PRD-003-v1.3-ux-enhancements.md  (+1 more)
scripts/: global-hotkey.ps1  global-hotkey.sh
src/: version.json
src/backend/: pyproject.toml
src/backend/app/: config.py  discuss.py  extract_text.py  file_transcribe.py  keyboard.py  main.py  media_fetcher.py  refiner_api.py
src/backend/app/audio/: converter.py
src/backend/app/integrations/: __init__.py  base.py  claude_api.py  mcp_server.py  router.py  ws_bridge.py
src/backend/app/refiner/: __init__.py  prompts.py  refiner.py
src/backend/app/refiner/providers/: __init__.py  anthropic_provider.py  base.py  claude_cli_provider.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
src/backend/app/stt/: whisper_engine.py
src/chrome-extension/: README.md  (+1 more)
tools/: bacon-voice-trigger.ahk  make-icons.py
(+80 files in other folders)
