[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bacon-ai-voice-v1-backend"
version = "0.1.0"
description = "BACON-AI Voice Backend - FastAPI STT service with Faster-Whisper"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "faster-whisper>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart",
    "pydub",
    "anthropic",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["../../tests/unit/backend"]
asyncio_mode = "auto"
